[gd_scene load_steps=2 format=3 uid="uid://o85i321qi44w"]

[ext_resource type="Script" path="res://scenes/truck/TruckSpawner.gd" id="1_88df4"]

[node name="TruckSpawner" type="Area2D" node_paths=PackedStringArray("collision")]
script = ExtResource("1_88df4")
collision = NodePath("ClickableArea")

[node name="Highlight" type="Polygon2D" parent="."]
visible = false
color = Color(0, 0.580392, 0.584314, 0.164706)
polygon = PackedVector2Array(-10, -10, 10, -10, 10, 10, -10, 10)

[node name="ClickableArea" type="CollisionPolygon2D" parent="."]
position = Vector2(-2, -389.125)
polygon = PackedVector2Array(51, 389.125, 50, -388.875, -52, -388.875, -50, 388.125)

[connection signal="body_exited" from="." to="." method="_on_body_exited"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
